<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">코인충전소</string>
    <string name="nas_ads">나스충전소</string>
    <string name="tnk_ads">TNK충전소</string>
    <string name="adsense_ads">애드센스</string>
    <string name="adsync_ads">애드싱크</string>
    <string name="adPopcorn_ads">AdPopcorn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">설정</string>

    <string name="nas_key">b22f802757c4b9237d63456532fb19a5</string>
    <string name="tnk_key" tools:ignore="TypographyDashes">d060b080–30f1–859b–b958-1f0304090809</string>
    <string name="vungle_key">598fa38d9c57ddf458004ead</string>
    <string name="vungle_placement_id">DEFAULT75811</string>
    <string name="version">버전</string>
    <string name="current_version">현재버전</string>
    <string name="new_version">최신버전</string>
    <string name="push_config">설정</string>
    <string name="new_ads_text"><![CDATA[신규광고 & 이벤트]]></string>
    <string name="About">정보</string>
    <string name="policy">이용약관</string>
    <string name="policy2">개인정보취급방침</string>

    <string name="my_page">마이 페이지 &amp; 설정</string>
    <string name="my_data">내역</string>
    <string name="now_fund">현재 적립금</string>
    <string name="receive_fund">적립 내역</string>
    <string name="use_fund">사용 내역</string>

    <string name="recommendation">추천</string>
    <string name="receive_recomm">추천정보</string>
    <string name="complete_mission">내 미션 완료여부</string>
    <string name="send_recomm">내가 추천한 친구</string>

    <string name="date_text">날짜</string>
    <string name="description_text">내용</string>
    <string name="cash_text">금액</string>
    <string name="state_text">상태</string>

    <string name="notice">공지사항</string>
    <string name="help">도움말</string>
    <string name="question">문의하기</string>

    <string name="current_coin">%1$d 코인</string>
    <string name="current_coin1">보유 코인 : %1$d</string>
    <string name="now_coin">보유 코인</string>


    <string name="re_try_message">임시서버 점검 중 입니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="fail_no_data">정보가 일치하지 않습니다.</string>
    <string name="network_error_message">네트워크 상태를 확인해주세요.</string>
    <string name="force_update_message">최신 업데이트가 있습니다.\n최신 업데이트 후 이용하실 수 있습니다.</string>
    <string name="update">업데이트</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="input_email">이메일</string>

    <string name="input_password_repeat">비밀번호 확인</string>
    <string name="input_nickname">별명</string>
    <string name="login">로그인</string>
    <string name="find_account">계정 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="join">회원가입</string>
    <string name="input_account_data_message">올바른 계정 정보를 입력하세요.</string>
    <string name="input_data_message">올바른 정보를 입력하세요.</string>
    <string name="input_phone_number">휴대폰 번호</string>
    <string name="check_your_email">임시비밀번호를 발송하였습니다.\n이메일을 확인하세요.</string>
    <string name="request_confirm_code">인증코드 요청</string>
    <string name="input_confirm_code">인증코드</string>
    <string name="check_confirm_code">인증코드 확인</string>
    <string name="success_send_confirm_code">인증코드가 발송되었습니다.</string>
    <string name="fail_input_confirm_code">인증코드를 입력하세요.</string>
    <string name="birth_year_ex">2017</string>
    <string name="birth_month_ex">04</string>
    <string name="birth_day_ex">22</string>
    <string name="input_recommend">추천인(선택)</string>
    <string name="men">남</string>
    <string name="women">여</string>
    <string name="personal_agreement">개인정보 취급방침</string>
    <string name="use_agreement">이용 약관</string>
    <string name="view_all">전체 보기</string>
    <string name="optional">선택 항목</string>
    <string name="compulsory">필수 항목</string>
    <string name="join_account_error">올바른 이메일을 입력하세요.</string>
    <string name="join_password_error">올바른 비밀번호를 입력하세요.</string>
    <string name="join_nickname_error">올바른 닉네임을 입력하세요.</string>
    <string name="join_agreement_check_error">약관에 동의해 주세요.</string>
    <string name="join_birth_data_error">올바른 생년월일을 입력하세요.</string>
    <string name="nickname_duplicated_error">이미 등록된 닉네임입니다.</string>
    <string name="account_duplicated_error">이미 등록된 이메일입니다.</string>
    <string name="store">스토어</string>

    <string name="vungle">Vungle(동영상광고)</string>
    <string name="setting">설정</string>
    <string name="cash">캐시</string>
    <string name="attendance">출석하기</string>
    <string name="nas">NAS</string>
    <string name="tnk">TNK</string>
    <string name="igaw">IGAWORKS</string>
    <string name="info_charge_emoticon">이모티콘 구매 안내</string>
    <string name="kakaoInvite">카카오톡 초대하기</string>
    <string name="invite_friend">친구에게 소개하기</string>
    <string name="load_fail_emoticon_link">상품정보를 가져오지 못했습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="charge_emoticon">이모티콘 구매하기</string>
    <string name="my_cash">보유 캐시</string>
    <string name="load_fail_member_view">회원정보를 불러올 수 없습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="receive_emoticon_phone_number">이모티콘을 받을 휴대폰번호</string>
    <string name="charge_money_select_info">이모티콘 가격을 선택하세요.(카카오톡에서 확인)</string>
    <string name="charge_money_select">가격 선택</string>
    <string name="hint_phone_number_delete_hyphen">(-)를 제외한 휴대폰번호 입력</string>
    <string name="emoticon_charge_check_list">이모티콘 구매하기 주의사항</string>
    <string name="emoticon_charge_info_01">정확한 전화번호를 입력하세요.</string>
    <string name="emoticon_charge_info_02">잘못된 전호번호 입력시 환불이 불가합니다.</string>
    <string name="emoticon_charge_info_03">카카오톡에 등록된 전화번호를 입력하세요.</string>
    <string name="emoticon_charge_info_04">구매가 진행되면 환불이 불가합니다.</string>
    <string name="charge">구매하기</string>
    <string name="save_list">적립 내역</string>
    <string name="use_list">사용 내역</string>
    <string name="no_list_data">내역 없음</string>
    <string name="no_use_list_data">사용 내역이 없습니다</string>
    <string name="no_save_list_data">적립 내역이 없습니다.</string>
    <string name="error">오류</string>
    <string name="error_try_again">오류가 발생하였습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="use_cash">사용 캐시</string>
    <string name="save_cash">적립 캐시</string>
    <string name="charge_description">구매 내용</string>
    <string name="charge_status">구매 상태</string>
    <string name="last_modify_date">최종 수정 날짜</string>
    <string name="charge_date">구매 날짜</string>
    <string name="emoticon_url">이모티콘 주소</string>
    <string name="cancel_reason">취소 사유</string>
    <string name="charge_phone">구매 전화번호</string>
    <string name="charge_cancel">구매 취소</string>
    <string name="success_cancel_charge">구매 취소 성공</string>
    <string name="fail_cancel_charge">구매 취소 실패</string>
    <string name="success_cancel_charge_message">구매 취소하였습니다.</string>
    <string name="fail_cancel_charge_message">구매 취소에 실패하였습니다.</string>
    <string name="un_sign">회원 탈퇴</string>
    <string name="logout">로그 아웃</string>
    <string name="account">계정</string>
    <string name="agreement">약관</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="change">변경</string>
    <string name="now_password">현재 비밀번호</string>
    <string name="new_password">새로운 비밀번호</string>
    <string name="repeat_new_password">새로운 비밀번호 확인</string>
    <string name="loading">Loading…</string>
    <string name="success_password_change">성공적으로 변경되었습니다.</string>
    <string name="fail_code">올바른 인증번호를 입력하세요.</string>

    <string name="unsign_code_null">탈퇴 코드를 입력하세요.</string>
    <string name="receive_unsign_code">탈퇴코드 받기</string>
    <string name="send_unsign_code">탈퇴하기</string>
    <string name="unsign_reason">탈퇴 사유</string>
    <string name="success_unsign">탈퇴하였습니다.</string>
    <string name="hint_password">비밀번호 (4 – 12자)</string>
    <string name="no_data">정보가 없습니다.</string>
    <string name="info">문자 발송번호는 070–8129–3333 입니다.\n간혹 문자가 수신되지 않을 경우 해당기기에서 070번호 수신이 가능한지 통신사에 확인 부탁드립니다.\n문의사항이 있으시면 sundaymorning0315.contact@gmail.com로 메일주시면 도움드리도록 하겠습니다.</string>

    <string name="question_id">아이디를 잊어버리셨나요?</string>
    <string name="question_pw">비밀번호를 잊어버리셨나요?</string>
    <string name="id_hint">이메일 주소</string>
    <string name="pw_hint">비밀번호</string>

    <string name="hint_nickname">별명 (한글,영어,숫자 2 – 8자)</string>
    <string name="sms_cert_error_103">이미 가입된 휴대폰 번호입니다.\n다른 번호로 인증을 받아주세요.\n계정을 분실하였을 경우\n sundaymorning0315.contact@gmail.com로 메일주시기 바랍니다.</string>
    <string name="ads_detail">광고상세</string>
    <string name="current_join">적립받기</string>

    <string name="old_pw_null">기존 비밀번호를 입력해주세요.</string>
    <string name="new_pw_null">새 비밀번호를 입력해주세요.</string>
    <string name="new_pw_confirm_null">새 비밀번호 확인란에 입력해주세요.</string>

    <string name="new_pw_confirm_error">새 비밀번호가 다릅니다.</string>

    <string name="new_pw_overlap">새 비밀번호가 기존 비밀번호와 동일합니다.</string>
    <string name="new_pw_disagree">해당된 비밀번호는 변경이 불가능합니다.</string>

    <string name="receive_friend">나를 추천한 친구</string>
    <string name="mission">미션</string>
    <string name="friend_to_friend">친구의 친구</string>
</resources>
