<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/ads1" android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/app_name" />
        <!--<item android:id="@+id/ads2" android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item android:id="@+id/ads3" android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item android:id="@+id/store" android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
        <item android:id="@+id/mypage" android:icon="@drawable/ic_face_black_24dp"
              android:title="@string/my_page" />
    </group>

    <item android:title="">
        <menu>
            <item android:id="@+id/notice" android:title="@string/notice" />
            <item android:id="@+id/help" android:title="@string/help" />
            <item android:id="@+id/question" android:title="@string/question" />
        </menu>
    </item>

</menu>
