<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edittext_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/input_phone_number"
        android:inputType="phone"
        android:paddingEnd="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp" />

    <Button
        android:id="@+id/btn_request_code"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/request_confirm_code" />

    <EditText
        android:id="@+id/edittext_code"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="30"
        android:hint="@string/input_confirm_code"
        android:inputType="textPassword"
        android:paddingEnd="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp" />

    <Button
        android:id="@+id/btn_request_code_confirm"
        style="@style/btn_style"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_confirm_code" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/info" />


</LinearLayout>