<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/id_hint"
        android:inputType="textEmailAddress"
        android:paddingEnd="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp" />

    <EditText
        android:id="@+id/edittext_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/input_phone_number"
        android:inputType="phone"
        android:paddingEnd="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp" />

    <Button
        android:id="@+id/btn_find_pw"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/find_password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/info" />
</LinearLayout>