<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/date_text"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/description_text"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/cash_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/cash_text"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/state_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/state_text"
        android:textColor="@android:color/white" />

</LinearLayout>