<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sundaymorning.coincharge.activity.RecommActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/date_text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/receive_friend"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/mission_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="3.1"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/mission"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/friend_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/friend_to_friend"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>