<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sundaymorning.coincharge.activity.ChangePWActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <EditText
            android:id="@+id/old_pw_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:ems="15"
            android:hint="@string/now_password"
            android:inputType="textPassword"
            android:paddingEnd="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_pw_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:ems="15"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingEnd="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/old_pw_edittext" />

        <EditText
            android:id="@+id/new_pw_edittext_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:ems="15"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:paddingEnd="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_pw_edittext" />

        <Button
            android:id="@+id/change_confirm"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/change_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>